# lunar-pits

./: .gitignore  README.md  RUN_SKYLIGHT_DATASET.bat  explore.ipynb  guidance.ipynb  pyproject.toml
config/: context_sources.yaml  ml_tile_policy.yaml
scripts/: build_skylight_dataset.py  crop_lroc_fixed_tile.py  debug_tile_systems.py  explore.ipynb  export_tile_quicklooks.py  gather_location_context.py  gather_tile_context_sources.py  guidance.ipynb  init_tile_scan_tracker.py  inspect_tiles.py  process_lroc_product.py  process_lroc_products.py  qa_lroc_tif.py  qa_tile_alignment.py  tile_lroc_tif.py  verify_ml_tile_alignment.py
scripts/grayscale_compare/: compare_tile_exposure.py  main.py  metrics.py  preprocessing.py  visualize.py
src/lunar_tile_pipeline/: __init__.py  cli.py  config.py  diviner.py  footprints.py  grail.py  io.py  lola.py  lroc.py  masks.py  projection.py  tiling.py
src/lunarpits/: __init__.py
src/lunarpits/annotation/: __init__.py  schema.py
src/lunarpits/datasets/: __init__.py  skylight_runner.py  tile_scan_tracker.py
src/lunarpits/features/: __init__.py  schema.py
src/lunarpits/indexing/: __init__.py  catalog.py
src/lunarpits/location/: __init__.py  context_sources.py  gather_location.py  lroc_search.py  models.py
src/lunarpits/models/: __init__.py  registry.py
tests/: test_footprint_intersection.py  test_location_utils.py  test_lon_normalization.py  test_masks.py  test_ml_tiles.py  test_processing_utils.py  test_projection.py  test_skylight_dataset_runner.py  test_tile_scan_tracker.py  test_tiling.py
(+8 files in other folders)
